include/hw_state.h

#ifndef HW_STATE_H
#define HW_STATE_H

#include <stdint.h>
#include <stddef.h>

#include "hw.h"

/**
 * @file hw_state.h
 * @brief Architectural-state descriptors, generated from pinned Arm manuals.
 *
 * The tables behind this API are generated by tools/state_gen.py from the
 * normalized manifests in spec/arm/, which are themselves imported from the
 * documents pinned in spec/sources.lock.yaml. Nothing here is hand-maintained:
 * to add a register you point the importer at the manual that defines it.
 *
 * Run `make state-coverage` for the accounting, and `make state-check` for the
 * CI invariants that keep a new source entry from being silently omitted.
 */

/** Which state universe a descriptor belongs to. */
typedef enum {
    HW_NS_ARCH = 0,                 /* ISA-defined PE state */
    HW_NS_CPU,                      /* implementation-defined state of one CPU */
    HW_NS_DEBUG,                    /* CoreSight / DWT / ITM / FPB / CTI */
    HW_NS_CLUSTER,                  /* SCU, private timers, GIC CPU interface */
    HW_NS_UNDOCUMENTED_DISCOVERED,  /* found experimentally; never counted as documented */
} hw_ns_t;

/** How the state is reached. */
typedef enum {
    HW_ACC_MEMORY_MAPPED = 0,
    HW_ACC_SPECIAL_REG,             /* Cortex-M MRS/MSR */
    HW_ACC_CORE_REG,                /* R0-R15, xPSR via the debug core register file */
    HW_ACC_SYSREG,                  /* AArch64 MRS/MSR */
    HW_ACC_CP15,                    /* AArch32 coprocessor */
    HW_ACC_CSR,                     /* RISC-V */
    HW_ACC_FP_SYSREG,               /* VMRS/VMSR */
} hw_acc_t;

/**
 * Whether the target implements a piece of state.
 *
 * This is deliberately separate from whether a read of it succeeded. A clean
 * read is not evidence of implementation: an unimplemented word in the Private
 * Peripheral Bus generally reads as zero rather than faulting, so "the
 * transaction completed" and "the register exists" are different claims.
 * Presence is decided only from the architecture, from feature and
 * configuration registers, or from CoreSight component discovery.
 */
typedef enum {
    HW_PRESENCE_UNKNOWN = 0,        /* no evidence either way; do not infer from a read */
    HW_PRESENCE_ARCHITECTURAL,      /* the architecture mandates it unconditionally */
    HW_PRESENCE_CONFIG_CONFIRMED,   /* a feature/configuration register says it exists */
    HW_PRESENCE_CONFIG_DENIED,      /* a feature/configuration register says it does not */
    HW_PRESENCE_DISCOVERED,         /* its block's CoreSight ID registers identify it */
    HW_PRESENCE_DISCOVERY_ABSENT,   /* its block's ID registers say the block is absent */
} hw_presence_t;

/** The outcome of attempting to read a piece of state. */
typedef enum {
    HW_READ_NOT_ATTEMPTED = 0,
    HW_READ_OK,
    HW_READ_BACKEND_UNSUPPORTED,
    HW_READ_UNSAFE,                 /* write-only, or needs a state the target is not in */
    HW_READ_ACCESS_DENIED,
    HW_READ_FAILED,
} hw_read_status_t;

/** Presence and read outcome together, kept apart on purpose. */
typedef struct {
    hw_presence_t    presence;
    const char      *evidence;      /* what decided presence, for the report */
    hw_read_status_t read;
    uint32_t         value;
    uint8_t          value_is_zero; /* a zero read is especially weak evidence */
} hw_state_result_t;

/**
 * What an encoding string means.
 *
 * An offset is meaningless without its component's base address, so it must
 * never be used as though it were an absolute address: doing so reads some
 * unrelated location and reports success.
 */
typedef enum {
    HW_ENC_ABSOLUTE = 0,   /* a full target address */
    HW_ENC_OFFSET,         /* relative to a component base we do not record yet */
    HW_ENC_SYSM,           /* MRS/MSR SYSm value */
    HW_ENC_CORE,           /* Arm core register */
    HW_ENC_FP_SYSREG,      /* VMRS/VMSR system register */
} hw_enc_kind_t;

typedef struct {
    const char *name;        /* canonical name as printed in the manual */
    hw_ns_t     ns;
    hw_acc_t    access;
    const char *encoding;    /* "0xE000ED00", "SYSm=16", ... */
    hw_enc_kind_t enc_kind;
    uint16_t    width;       /* bits */
    uint8_t     readable;
    uint8_t     writable;
    uint8_t     snapshot;    /* belongs in a whole-CPU snapshot */
    const char *feature;     /* "" when unconditional */
    const char *component;   /* owning block, for CoreSight discovery */
} hw_state_desc_t;

/** A state element that is an alias of part of another element's storage. */
typedef struct {
    const char *name;
    const char *target;
    uint16_t    bit_offset;
    uint16_t    bit_width;
} hw_state_alias_t;

/** A memory-mapped location whose write performs an action rather than storing. */
typedef struct {
    const char *name;
    const char *encoding;
    const char *reason;
} hw_state_operation_t;

/** A CoreSight block, identified by its component ID registers. */
typedef struct {
    const char *name;
    uint32_t    base;      /* CIDR0 lives at base + 0xFF0 */
} hw_state_component_t;

/**
 * A debug access path: DCRSR selects a register and its value appears in DCRDR.
 *
 * This is a second, independent encoding for state that is also reachable by
 * MRS/MSR. An instruction uses the SYSm value from Table B5-1; a debugger uses
 * the REGSEL value from the DCRSR field description. They are not the same
 * number, and conflating them is a classic source of wrong reads.
 */
typedef struct {
    const char *name;
    uint8_t     regsel;
    uint8_t     lsb;      /* REGSEL 20 packs four registers into byte lanes */
    uint8_t     width;
} hw_state_dbgreg_t;

/** What a target actually implements, derived from its ID registers. */
typedef struct {
    uint32_t    cpuid;
    uint16_t    partno;         /* CPUID bits[15:4] */
    uint8_t     variant;        /* CPUID bits[23:20] -> rN */
    uint8_t     revision;       /* CPUID bits[3:0]   -> pN */
    const char *overlay_revision;  /* product revision the pinned TRM documents */
    uint8_t     revision_matches;  /* 0 when the TRM documents a different revision */
    const char *cpu_name;       /* NULL when the part is not one we have a TRM for */
    const char *overlay;        /* pinned CPU overlay database, or NULL */
    uint8_t     fp_extension;
    uint8_t     mpu;
    uint8_t     mpu_regions;    /* MPU_TYPE.DREGION */
    uint8_t     dwt_numcomp;    /* DWT_CTRL.NUMCOMP */
    uint8_t     nvic_intlinesnum;  /* ICTR.INTLINESNUM */
} hw_cpu_features_t;

/** One generated state database (an architecture, or a CPU overlay). */
typedef struct {
    const char                 *name;
    const char                 *source;     /* e.g. "DDI0403 E.e" */
    const hw_state_desc_t      *states;
    size_t                      state_count;
    const hw_state_alias_t     *aliases;
    size_t                      alias_count;
    const hw_state_operation_t *operations;
    size_t                      operation_count;
    const hw_state_dbgreg_t    *dbgregs;
    size_t                      dbgreg_count;
    const hw_state_component_t *components;
    size_t                      component_count;
} hw_state_db_t;

/** The databases built into this library. Terminated by a NULL name. */
extern const hw_state_db_t hw_state_databases[];

/** Look a database up by name, e.g. "armv7m". Returns NULL if absent. */
const hw_state_db_t *hw_state_db(const char *name);

/** Find one descriptor by canonical name. Returns NULL if absent. */
const hw_state_desc_t *hw_state_find(const hw_state_db_t *db, const char *name);

/**
 * Read one state element from a live target.
 *
 * Only memory-mapped state with an absolute address can be read through the
 * generic backend interface today; everything else reports
 * HW_STATE_BACKEND_UNSUPPORTED rather than guessing. 'why' may be NULL.
 *
 * @return 0 when the value was read, -1 otherwise.
 */
/**
 * Determine whether the target implements this state, without reading it.
 *
 * Never consults a data read: only the architecture, the resolved feature set
 * and CoreSight component discovery.
 */
hw_presence_t hw_state_presence(hw_t *ctx, const hw_state_desc_t *desc,
                                const hw_cpu_features_t *f, const char **evidence);

/**
 * Determine presence and, separately, attempt a read.
 *
 * The read outcome never changes the presence verdict.
 */
int hw_state_query(hw_t *ctx, const hw_state_desc_t *desc,
                   const hw_cpu_features_t *f, hw_state_result_t *out);

int hw_state_read(hw_t *ctx, const hw_state_desc_t *desc,
                  uint32_t *value_out, hw_read_status_t *why);

/**
 * Read the target's ID registers and derive what it implements.
 *
 * The target must be halted. Returns 0 on success. An unrecognised part is not
 * an error: cpu_name and overlay are left NULL, because the absence of a
 * pinned TRM for a part is a gap in our sources, not a fault in the target.
 */
int hw_state_identify(hw_t *ctx, hw_cpu_features_t *out);

/**
 * Whether a descriptor's feature requirement is satisfied by this target.
 * Descriptors with no requirement are always expected.
 */
int hw_state_expected(const hw_state_desc_t *desc, const hw_cpu_features_t *f);

/** Human-readable name for an availability result. */
const char *hw_presence_name(hw_presence_t p);
const char *hw_read_status_name(hw_read_status_t r);

/** Find the DCRSR access path for a register, or NULL. */
const hw_state_dbgreg_t *hw_state_dbgreg(const hw_state_db_t *db, const char *name);

#endif // HW_STATE_H